--- a/mongo_connector/Dockerfile
+++ b/mongo_connector/Dockerfile
@@ -1,2 +1,3 @@
 FROM python:3.7.2-alpine3.9
-RUN pip install pymongo flask Flask Flask-API 
+RUN pip install pymongo flask Flask Flask-API
+COPY codebase/ /codebase
