--- a/ranking_system/Dockerfile
+++ b/ranking_system/Dockerfile
@@ -1,2 +1,3 @@
 FROM python:3.7.2
 RUN pip3 install opencv-python==3.4.2.17 opencv-contrib-python==3.4.2.17 sklearn pandas
+COPY codebase/ /codebase
