--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
 version: '2.2'
 services:
-  api-python:
-    build:
-      context: ./ranking_system
-      dockerfile: Dockerfile
-    command: python /codebase/api_server.py
-    volumes:
-      - ./ranking_system/dataset:/dataset
-      - ./ranking_system/testdata:/testdata
-    ports:
-      - 127.0.0.1:5000:5000
-  api-js:
-    build:
-      context: ./vk_interaction_obj_rec
-      dockerfile: Dockerfile
-    command: node VkWall.js
+  # api-python:
+  #   build:
+  #     context: ./ranking_system
+  #     dockerfile: Dockerfile
+  #   command: python /codebase/api_server.py
+  #   volumes:
+  #     - ./ranking_system/dataset:/dataset
+  #     - ./ranking_system/testdata:/testdata
+  #   ports:
+  #     - 127.0.0.1:5000:5000
+  # api-js:
+  #   build:
+  #     context: ./vk_interaction_obj_rec
+  #     dockerfile: Dockerfile
+  #   command: node VkWall.js
   mongo-db:
     image: mongo:4.0.6
     environment:
