--- a/ranking_system/Dockerfile
+++ b/ranking_system/Dockerfile
@@ -1,7 +1,10 @@
 FROM python:3.7.2
 # pkg for ranking-system
-RUN pip3 install opencv-python==3.4.2.17 opencv-contrib-python==3.4.2.17 sklearn pandas ipython
+RUN pip3 install opencv-python==3.4.2.17 opencv-contrib-python==3.4.2.17 pillow ipython
 RUN apt-get update && apt-get install -y ipython
 # pkg for mongo, api-gateway
-RUN pip3 install pymongo flask Flask Flask-API
+RUN pip3 install pymongo flask Flask Flask-API requests
+# search for rf
+RUN pip3 install keras sklearn tf-estimator-nightly==1.12.0.dev20181208 tf-nightly==1.14.1.dev20190409
 COPY codebase/ /codebase
+CMD ["python3 /codebase/api_server.py"]
