fix for network local usage

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,11 +13,13 @@ services:
 #    ports:
 #      - 127.0.0.1:5000:5000
   api-js:
+    network_mode: host
     build:
       context: ./vk_interaction_obj_rec
       dockerfile: Dockerfile
     command: node VkWall.js
   mongo-db:
+    network_mode: bridge
     image: mongo:4.0.6
     environment:
       - MONGO_INITDB_ROOT_USERNAME=root
