--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: '2.2'
 services:
-#  api-python:
-#    build:
-#      context: ./ranking_system
-#      dockerfile: Dockerfile
-#    command: python3 /codebase/api_server.py
-#    volumes:
-#      - ./ranking_system/dataset:/dataset
-#      - ./ranking_system/tmpdata:/tmpdata
-#      - ./ranking_system/cluster:/cluster
-#    ports:
-#      - 127.0.0.1:5000:5000
+  api-python:
+    build:
+      context: ./ranking_system
+      dockerfile: Dockerfile
+    command: python3 /codebase/api_server.py
+    volumes:
+      - ./ranking_system/dataset:/dataset
+      - ./ranking_system/tmpdata:/tmpdata
+      - ./ranking_system/cluster:/cluster
+    ports:
+    - 127.0.0.1:5000:5000
   api-js:
     network_mode: host
     build:
