--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,8 +1,6 @@
 [defaults]
+host_key_checking = False
+
 
 [ssh_connection]
 ssh_args = -F ./ssh.cfg
-Control_path = ~/.ssh/ansible-%%r@%%h:%%p 
-ControlMaster= auto
-ControlPersist=5m
-
