--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,41 @@
 version: '2.2'
 services:
-#  api-python:
-#    build:
-#      context: ./ranking_system
-#      dockerfile: Dockerfile
-#    command: python3 /codebase/api_server.py
-#    depends_on: mongo-db
-#    volumes:
-#      - ./ranking_system/dataset:/dataset
-#      - ./ranking_system/tmpdata:/tmpdata
-#      - ./ranking_system/cluster:/cluster
-#      - /home/flomko/.keras:/root/.keras:ro
-#    ports:
-#    - 127.0.0.1:5000:5000
-#    networks:
-#      - lostpet
+  api-python:
+    build:
+      context: ./ranking_system
+      dockerfile: Dockerfile
+    command: python3 /codebase/api_server.py
+    depends_on:
+    - mongo-db
+    volumes:
+      - ./ranking_system/dataset:/dataset
+      - ./ranking_system/tmpdata:/tmpdata
+      - ./ranking_system/cluster:/cluster
+    ports:
+    - 127.0.0.1:5000:5000
+    networks:
+      - lostpet
   api-js:
-    network_mode: host
     build:
       context: ./vk_interaction_obj_rec
       dockerfile: Dockerfile
     command: node VkWall.js
     depends_on:
     - mongo-db
-#    networks:
-#      - lostpet
+    - api-python
+    networks:
+      - lostpet
   mongo-db:
-    network_mode: bridge
     image: mongo:4.0.6
     environment:
       - MONGO_INITDB_ROOT_USERNAME=root
       - MONGO_INITDB_ROOT_PASSWORD=rootPassXXX
     ports:
     - 127.0.0.1:27017:27017
-#    networks:
-#      - lostpet
+    networks:
+      - lostpet
 
 
 networks:
   lostpet:
     driver: bridge
-    ipam:
-      driver: default
