--- a/vk_interaction_obj_rec/codebase/package.json
+++ b/vk_interaction_obj_rec/codebase/package.json
@@ -5,6 +5,8 @@
   "main": "NLP.js",
   "dependencies": {
     "node-gyp": "^3.8.0",
+    "axios": "^0.18.0",
+    "dotenv": "^6.2.0",
     "node-vk-bot": "^1.2.3",
     "node-vk-bot-api": "^2.4.8",
     "underscore": "^1.9.1",
