improve ansible, added GCP vm instance,

--- a/ansible/ssh.cfg
+++ b/ansible/ssh.cfg
@@ -3,4 +3,9 @@ Host ec2-34-245-226-15.eu-west-1.compute.amazonaws.com
   IdentityFile  ~/.ssh/pet_aws.pem
   User  ec2-user
   ServerAliveInterval 120
+Host googlebox
+  Hostname 35.228.237.16
+  IdentityFile  ~/.ssh/gcp_pet 
+  User findpetprojectinit
+  ServerAliveInterval 120
 
