--- a/ranking_system/codebase/config.yaml
+++ b/ranking_system/codebase/config.yaml
@@ -1,4 +1,4 @@
-mongourl: 'mongodb://root:rootPassXXX@127.0.0.1:27017/admin'
+mongourl: 'mongodb://root:rootPassXXX@mongo-db:27017/admin'
 database: 'lostpets'
 collection: 'dataset'
 collection_new: 'datastore'
