--- a/ranking_system/codebase/config.yaml
+++ b/ranking_system/codebase/config.yaml
@@ -6,6 +6,8 @@ image_url: 'https://pp.userapi.com/c851216/v851216826/efbc4/pnz7eaWD3b8.jpg'
 cluster_path: '../cluster/knn.joblib.pkl'
 dataset_path: '../dataset/'
 temp_path: '../tmpdata/'
+vectors_path: '../cluster/vectors.npy'
+model_path: '/home/flomko/.keras/models/vgg19_weights_tf_dim_ordering_tf_kernels.h5'
 
 test:
   api_url: 'http://35.228.237.16:5000'
