init another collection for vector-name association

--- a/ranking_system/codebase/config.yaml
+++ b/ranking_system/codebase/config.yaml
@@ -2,6 +2,7 @@ mongourl: 'mongodb://root:rootPassXXX@127.0.0.1:27017/admin'
 database: 'lostpets'
 collection: 'dataset'
 collection_new: 'datastore'
+collection_vectors: 'vectors'
 image_url: 'https://pp.userapi.com/c851216/v851216826/efbc4/pnz7eaWD3b8.jpg'
 cluster_path: '../cluster/knn.joblib.pkl'
 dataset_path: '../dataset/'
