--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 *.retry*
 ranking_system/tmpdata/
 vk_interaction_obj_rec/.env
+vk_interaction_obj_rec/codebase/build/
+vk_interaction_obj_rec/codebase/node_modules/
+vk_interaction_obj_rec/codebase/package-lock.json
