--- a/ranking_system/codebase/config.yaml
+++ b/ranking_system/codebase/config.yaml
@@ -2,11 +2,11 @@ mongourl: 'mongodb://root:rootPassXXX@mongo-db:27017/admin'
 database: 'lostpets'
 collection: 'dataset'
 collection_new: 'datastore'
-image_url: 'https://pp.userapi.com/c851216/v851216826/efbc4/pnz7eaWD3b8.jpg'
+image_url: 'https://sun9-44.userapi.com/c635104/v635104532/56199/xUZvuTiE0pA.jpg'
 cluster_path: '../cluster/knn.joblib.pkl'
 dataset_path: '../dataset/'
 temp_path: '../tmpdata/'
 
 test:
-  api_url: 'http://35.228.237.16:5000'
-  mongourl: 'mongodb://root:rootPassXXX@35.228.237.16:27017/admin'
+  api_url: 'http://35.228.60.57:5000'
+  mongourl: 'mongodb://root:rootPassXXX@35.228.60.57:27017/admin'
