--- a/vk_interaction_obj_rec/codebase/package.json
+++ b/vk_interaction_obj_rec/codebase/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node VkWall.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "install": "node-gyp rebuild"
   },
