--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,10 @@ services:
     depends_on:
     - mongo-db
     healthcheck:
-      test: ["CMD", "./healtcheck.sh", "http://api-python:5000"]
+      test: ["CMD", "./healtcheck.sh", "http://127.0.0.1:5000/search_trans/"]
       interval: 30s
       timeout: 10s
-      retries: 100
+      retries: 10
     volumes:
       - ./ranking_system/dataset:/dataset
       - ./ranking_system/tmpdata:/tmpdata
@@ -25,9 +25,9 @@ services:
       context: ./vk_interaction_obj_rec
       dockerfile: Dockerfile
     command: node VkWall.js
-    depends_on:
-      api-python:
-        condition: service_healthy
+#    depends_on:
+#      api-python:
+#        condition: service_healthy
     networks:
       - lostpet
   mongo-db:
