--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,12 @@
 stages:
   - test
-  - deploy
 
 formatter:
   stage: test
   script: 
     - apt-get update -qy
-    - apt-get install -y python3.7-dev python3.7-pip
+    - apt-get install -y python3-dev python3-pip
     - pip3 install -r ranking_system/requirements.txt
-    - black ranking_system
-    - flake8 ranking_system
+    - black --check ranking_system
+    - flake8 --ignore=E501 ranking_system
   
