--- a/scheduler/Dockerfile
+++ b/scheduler/Dockerfile
@@ -4,4 +4,4 @@ COPY codebase/ /codebase
 WORKDIR /codebase
 # pkg for ranking-system
 RUN pip3 install -r requirements.txt
-CMD ["python3 api_server.py"]
+CMD ["python3 main.py"]
