--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -2,6 +2,9 @@
 host_key_checking = False
 ask_vault_pass = True
 
-
 [ssh_connection]
+Control_path = ~/.ssh/ansible-%%r@%%h:%%p
+ControlMaster= auto
+ControlPersist=5m
+Pipelining = True
 ssh_args = -F ./ssh.cfg
