Set staging distribution system Fedora

--- a/ansible/ssh.cfg
+++ b/ansible/ssh.cfg
@@ -1,11 +1,6 @@
-Host ec2-34-245-226-15.eu-west-1.compute.amazonaws.com
-  Hostname ec2-34-245-226-15.eu-west-1.compute.amazonaws.com
-  IdentityFile  ~/.ssh/pet_aws.pem
-  User  ec2-user
-  ServerAliveInterval 120
 Host googlebox
-  Hostname 35.228.237.16
-  IdentityFile  ~/.ssh/gcp_pet 
-  User findpetprojectinit
+  Hostname 192.168.100.78
+  IdentityFile  ~/.ssh/id_rsa
+  User flomko
   ServerAliveInterval 120
 
