--- a/ansible/roles/env/tasks/main.yml
+++ b/ansible/roles/env/tasks/main.yml
@@ -1,18 +1,22 @@
 ---
 # tasks file for env
 
+- name: Install dnf plugins
+  ansible.builtin.dnf:
+    name:
+      - dnf-plugins-core
+    state: latest
 
+- name: Add repo
+  shell: "sudo dnf config-manager --add-repo https://download.docker.com/linux/fedora/docker-ce.repo"
 
-- name: Install a containerd .deb package from the internet.
-  apt:
-    deb: https://download.docker.com/linux/debian/dists/stretch/pool/stable/amd64/containerd.io_1.2.5-1_amd64.deb
-- name: Install a Docker-cli-ce .deb package from the internet.
-  apt:
-    deb: https://download.docker.com/linux/debian/dists/stretch/pool/stable/amd64/docker-ce-cli_18.09.5~3-0~debian-stretch_amd64.deb
-
-- name: Install a Docker-ce .deb package from the internet.
-  apt:
-    deb: https://download.docker.com/linux/debian/dists/stretch/pool/stable/amd64/docker-ce_18.09.5~3-0~debian-stretch_amd64.deb
+- name: Install docker
+  ansible.builtin.dnf:
+    state: latest
+    name:
+      - docker-ce
+      - docker-ce-cli
+      - containerd.io
 
 - name: Enable docker
   systemd:
@@ -21,7 +25,7 @@
     enabled: yes
 
 - name: Install pip3
-  apt:
+  dnf:
     name: python3-pip
     state: latest
 
